fixed instagram link and adjust some spacing

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -23,8 +23,8 @@
     order: 1;
   }
 
-  &__social-media-title--semi-bold {
-    font-weight: normal;
+  &__social-media-link {
+    padding-left: 10px;
   }
 }
 
