--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -2,8 +2,7 @@
 
 body {
   height: 100%;
-  padding-left: 3vw;
-  padding-right: 3vw;
+  padding: 0 20px;
 
   font: normal $font-size-base $font-family-base;
   color: $cl-primary;
