--- a/src/templates/itemTemplate.scss
+++ b/src/templates/itemTemplate.scss
@@ -18,7 +18,7 @@
   &__Field__Value {
     font-size: 1.5em;
     font-weight: lighter;
-    padding-right: 3vh;
+    padding-right: 40px;
   }
 
   &__Image {
